--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ footer {
 </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>História</title>
+    <title>AgroCitro</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -364,4 +364,5 @@ footer {
     </footer>
 
 </body>
+
 </html>
