--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h1, h2 {
 
 .meio-texto {
     background-color: #00561B;
-    color:  white;
+    color:  #FFFFFF;
     font-size: 24px;
     font-style: italic;
     font-weight: 600;
@@ -365,4 +365,5 @@ footer {
 </body>
 
 </html>
+
 
